--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@ STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/insanum/obsidian_gruvbox/HEAD/theme.css
 BASE_THEME=dark
-dgHomeLink=false
+dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
