--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Dračák
+SITE_NAME_HEADER=Dračák a podzemí
 SITE_MAIN_LANGUAGE=cs
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -19,7 +19,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
-dgShowFileTree=false
+dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
